--- a/packageManifest.json
+++ b/packageManifest.json
@@ -9,7 +9,7 @@
   "apps": [
     {
       "id": "67e55c13-d454-4cbe-b64e-d806dc482b39",
-      "name": "startPage",
+      "name": "Tapo Integration",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/App/tapo_device_install.groovy",
       "required": true,
@@ -20,56 +20,56 @@
   "drivers": [
     {
       "id": "380579db-772f-4566-9f0d-fc218a61cfbb",
-      "name": "lib_tpLink_CapColor",
+      "name": "Color Bulb",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_bulb_color.groovy",
       "required": false
     },
     {
       "id": "25006678-a861-431c-aa49-e478a3f55a45",
-      "name": "lib_tpLink_CapDimmer",
+      "name": "Dimming Bulb",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_bulb_dimmer.groovy",
       "required": false
     },
     {
       "id": "9aa0e3bd-6014-48d3-bd63-911f061ea301",
-      "name": "Lighting Effect",
+      "name": "Light Strip",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_bulb_lightStrip.groovy",
       "required": false
     },
     {
       "id": "3999e47c-b686-4e3a-a53b-4a10327d2721",
-      "name": "Alarm Type",
+      "name": "Hub",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub.groovy",
       "required": false
     },
     {
       "id": "d4d36a2d-0222-4985-9582-1d572461237b",
-      "name": "lastTrigger",
+      "name": "Button Sensor",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_button.groovy",
       "required": false
     },
     {
       "id": "1dfc5a6e-4b72-4193-a1b2-07b9b0326251",
-      "name": "lib_tpLink_sensors",
+      "name": "Contact Sensor",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_contact.groovy",
       "required": false
     },
     {
       "id": "60a298a1-f39b-413d-aff5-7c3aa50eee34",
-      "name": "lib_tpLink_sensors",
+      "name": "Motion Sensor",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_motion.groovy",
       "required": false
     },
     {
       "id": "bdf735a9-870a-4622-bf19-fc751662416b",
-      "name": "lib_tpLink_sensors",
+      "name": "New Sensor",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_newType.groovy",
       "required": true
@@ -83,28 +83,28 @@
     },
     {
       "id": "6e68c889-d90b-4cf8-94c6-5d7987d827a3",
-      "name": "lib_tpLink_CapSwitch",
+      "name": "New Wifi Device",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_newType.groovy",
       "required": true
     },
     {
       "id": "6ec7f047-bfb8-4c29-a375-75f3342ad6a3",
-      "name": "lib_tpLink_CapSwitch",
+      "name": "Plug-Switch",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_plug.groovy",
       "required": false
     },
     {
       "id": "c929612c-3564-4962-9bec-807d723a0da0",
-      "name": "lib_tpLink_CapDimmer",
+      "name": "Dimming Plug-Switch",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_plug_dimmer.groovy",
       "required": false
     },
     {
       "id": "314f88ca-7f0e-415e-acd5-341a5bb46faa",
-      "name": "lib_tpLink_CapSwitch",
+      "name": "Energy Monitor Plug",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_plug_em.groovy",
       "required": false
