--- a/packageManifest.json
+++ b/packageManifest.json
@@ -7,7 +7,7 @@
   "communityLink": "https://community.hubitat.com/t/tp-link-tapo-devices/121084",
   "dateReleased": "2023-08-14",
   "releaseNotes": "Fixed driver and app files for compatibility with Hubitat Package Manager Issue",
-  "licenseFile": "https://raw.githubusercontent.com/DaveGut/HubitatActive/master/KasaDevices/License",
+  "licenseFile": "https://raw.githubusercontent.com/DaveGut/HubitatActive/master/KasaDevices/License.md",
 "apps": [
     {
       "id": "67e55c13-d454-4cbe-b64e-d806dc482b39",
