--- a/packageManifest.json
+++ b/packageManifest.json
@@ -7,7 +7,7 @@
   "communityLink": "https://community.hubitat.com/t/tp-link-tapo-devices/121084",
   "dateReleased": "2023-10-27",
   "releaseNotes": "Added battery state to sensors.  Added setLed to plug/switch preferences. Logging cleanup.",
-  "licenseFile": "https://raw.githubusercontent.com/DaveGut/HubitatActive/master/KasaDevices/License",
+  "licenseFile": "https://github.com/DaveGut/tpLink_Hubitat/blob/main/LICENSE",
   "apps": [
     {
       "id": "79f31830-a697-40c5-9c87-76f9db0c63b7",
