--- a/packageManifest.json
+++ b/packageManifest.json
@@ -2,15 +2,15 @@
   "packageName": "Tapo Plugs, Switches and Bulbs",
   "author": "David Gutheinz",
   "version": "2.3.7b",
-  "minimumHEVersion": "2.3.6",
+  "minimumHEVersion": "2.3.8",
   "documentationLink": "https://github.com/DaveGut/tpLink_Hubitat",
   "communityLink": "https://community.hubitat.com/t/tp-link-tapo-devices/121084",
-  "dateReleased": "2023-11-14",
-  "releaseNotes": "Added device Robovac. Clean up error correction inconsistencies.",
+  "dateReleased": "2024-06-17",
+  "releaseNotes": "Address KLAP protocol sequence number state issue causing errors obtaining data from device.",
   "licenseFile": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/LICENSE",
   "apps": [
     {
-      "id": "3a7545e0-9086-4acf-b0bb-fc4e9983a63d",
+      "id": "79f31830-a697-40c5-9c87-76f9db0c63b7",
       "name": "tapo_device_install",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/App/tapo_device_install.groovy",
@@ -21,92 +21,92 @@
   ],
   "drivers": [
     {
-      "id": "e86a1318-f1d2-498b-b2ee-7e76a36456ba",
-      "name": "tpLink_bulb_color",
+      "id": "da263b7d-5b17-468a-836e-86ef98b11187",
+      "name": "Color Bulb",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_bulb_color.groovy",
       "required": false
     },
     {
-      "id": "3258a96c-9385-4ba8-8ae7-08e52d1baa56",
-      "name": "tpLink_bulb_dimmer",
+      "id": "53b8a000-57cc-4b31-bade-3b157b8774e9",
+      "name": "Dimming Bulb",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_bulb_dimmer.groovy",
       "required": false
     },
     {
-      "id": "a84eb1b3-b108-4d04-8385-ab6345a24b3f",
-      "name": "tpLink_bulb_lightStrip",
+      "id": "ec486eae-0c27-4e79-bcd2-77afbb4013f0",
+      "name": "Light Strip",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_bulb_lightStrip.groovy",
       "required": false
     },
     {
-      "id": "6c46e346-108d-4a74-92b8-4fd1e10e08cb",
-      "name": "tpLink_hub",
+      "id": "17c01a4b-34f7-4cb5-b6e3-10f6259b06c2",
+      "name": "HUB",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub.groovy",
       "required": false
     },
     {
-      "id": "e35c5638-21c7-4be5-b10d-6e7cd24eee54",
-      "name": "tpLink_hub_button",
+      "id": "b9c64b4a-8b7e-4aca-b575-c1248e7976b4",
+      "name": "HUB-Button",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_button.groovy",
       "required": false
     },
     {
-      "id": "92355e44-797a-40be-8f55-cfc1b0fd7120",
-      "name": "tpLink_hub_contact",
+      "id": "504c09cc-d955-4b16-8baa-89ce9f4c4542",
+      "name": "HUB-Contact Sensor",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_contact.groovy",
       "required": false
     },
     {
-      "id": "5b702ae6-2001-443a-8cd8-c1632566fcc2",
-      "name": "tpLink_hub_motion",
+      "id": "09d5b8d6-d645-42f8-b982-2e113832841d",
+      "name": "HUB-Motion Sensor",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_motion.groovy",
       "required": false
     },
     {
-      "id": "679e6743-1dc0-470b-9df7-96cf9fabc9b8",
-      "name": "tpLink_hub_tempHumidity",
+      "id": "52a4c55d-5e1b-4094-951d-1bfa6d760e61",
+      "name": "HUB-Temp Humidity Sensor",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_tempHumidity.groovy",
       "required": false
     },
     {
-      "id": "412b7bb8-51d1-4e6f-91c2-5a30558bc4e1",
-      "name": "tpLink_plug",
+      "id": "afdc84ce-c66e-46b9-a6c2-ea3a7e44a5c5",
+      "name": "Plug-Switch",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_plug.groovy",
       "required": false
     },
     {
-      "id": "82a0ad36-5ddf-4aef-b6dc-0eb614563e1d",
-      "name": "tpLink_plug_dimmer",
+      "id": "19a7fb5c-195f-4dbc-abdc-7bddff78c79d",
+      "name": "Dimming Plug-Switch",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_plug_dimmer.groovy",
       "required": false
     },
     {
-      "id": "6ce37f97-a595-42cf-ac93-28b48ffa84fa",
-      "name": "tpLink_plug_em",
+      "id": "e3cd85e6-3da7-4576-a95a-f99ac0266b54",
+      "name": "Energy Monitor Plug",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_plug_em.groovy",
       "required": false
     },
     {
-      "id": "e61d93dd-62a2-438e-8248-4e7d9df95de1",
-      "name": "tpLink_plug_multi",
+      "id": "0dc4415c-4f7d-4fc8-a8d3-ce9c14f86462",
+      "name": "MultiPlug (requires child)",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_plug_multi.groovy",
       "required": false
     },
     {
-      "id": "18a8995b-b7b0-4481-80fd-654b12a82f1f",
-      "name": "tpLink_plug_multi_child",
+      "id": "136c0b05-d6d8-49bb-9177-16263786d290",
+      "name": "MultiPlug Child",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_plug_multi_child.groovy",
       "required": false
