--- a/testManifest.json
+++ b/testManifest.json
@@ -2,11 +2,11 @@
   "packageName": "Tapo Plugs, Switches and Bulbs",
   "author": "David Gutheinz",
   "version": "2.3.7b",
-  "minimumHEVersion": "2.3.6",
+  "minimumHEVersion": "2.3.8",
   "documentationLink": "https://github.com/DaveGut/tpLink_Hubitat",
   "communityLink": "https://community.hubitat.com/t/tp-link-tapo-devices/121084",
-  "dateReleased": "2023-11-14",
-  "releaseNotes": "Added device Robovac. Clean up error correction inconsistencies.",
+  "dateReleased": "2024-06-17",
+  "releaseNotes": "Address KLAP protocol sequence number state issue causing errors obtaining data from device.",
   "licenseFile": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/LICENSE",
   "apps": [
     {
