--- a/packageManifest.json
+++ b/packageManifest.json
@@ -6,12 +6,10 @@
   "documentationLink": "https://github.com/DaveGut/tpLink_Hubitat",
   "communityLink": "https://community.hubitat.com/t/tp-link-tapo-devices/121084",
   "dateReleased": "2024-08-04",
-  "releaseNotes": "Major update to support new KASA and TAPO devices as well as future-proof as much as possible.  See release notes in gitHub repository docs folder for detailed information.",
-  "licenseFile": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/LICENSE",
   "apps": [
     {
-      "id": "79f31830-a697-40c5-9c87-76f9db0c63b7",
-      "name": "Tapo Integration",
+      "id": "e44922d8-d974-4817-b935-f97f5f221a86",
+      "name": "Tapo Device Install",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/App/tapo_device_install.groovy",
       "required": true,
@@ -21,120 +19,120 @@
   ],
   "drivers": [
     {
-      "id": "da263b7d-5b17-468a-836e-86ef98b11187",
-      "name": "Color Bulb",
+      "id": "c9450de6-931b-4cfb-9ff8-393e2f52b2c9",
+      "name": "TpLink Color Bulb",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_color_bulb.groovy",
       "required": false
     },
     {
-      "id": "53b8a000-57cc-4b31-bade-3b157b8774e9",
-      "name": "Dimming Bulb",
+      "id": "f7f01cd9-23ce-41e0-b1cc-b03bcc1cd736",
+      "name": "TpLink Bulb Dimmer",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_dimmer.groovy",
       "required": false
     },
     {
-      "id": "ec486eae-0c27-4e79-bcd2-77afbb4013f0",
-      "name": "Light Strip",
+      "id": "dfa54522-525c-4efb-b853-bf67883a4ab0",
+      "name": "TpLink Lightstrip",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_lightStrip.groovy",
       "required": false
     },
     {
-      "id": "17c01a4b-34f7-4cb5-b6e3-10f6259b06c2",
-      "name": "HUB",
+      "id": "78158d08-e10b-40fb-bf7a-db8d97779fa2",
+      "name": "TpLink Hub",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub.groovy",
       "required": false
     },
     {
-      "id": "b9c64b4a-8b7e-4aca-b575-c1248e7976b4",
-      "name": "HUB:  Button",
+      "id": "1fc1c48a-438c-4feb-b8b3-6fbba82161b5",
+      "name": "TpLink Hub Button",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_button.groovy",
       "required": false
     },
     {
-      "id": "504c09cc-d955-4b16-8baa-89ce9f4c4542",
-      "name": "HUB:  Contact Sensor",
+      "id": "2dc7e721-cfe4-4a2b-bc85-48aeb5590336",
+      "name": "TpLink Hub Contact",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_contact.groovy",
       "required": false
     },
     {
-      "id": "09d5b8d6-d645-42f8-b982-2e113832841d",
-      "name": "HUB:  Motion Sensor",
-      "namespace": "davegut",
-      "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_motion.groovy",
-      "required": false
-    },
-    {
-      "id": "52a4c55d-5e1b-4094-951d-1bfa6d760e61",
-      "name": "HUB:  Temp Humidity Sensor",
-      "namespace": "davegut",
-      "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_tempHumidity.groovy",
-      "required": false
-    },
-    {
-      "id": "2695f9fa-006f-4b6b-9c03-99b12d1cbde6",
-      "name": "HUB:  Leak Sensor",
+      "id": "fc80f505-ec98-4f0e-a91e-2da1411e7e0d",
+      "name": "TpLink Hub Leak",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_leak.groovy",
       "required": false
     },
     {
-      "id": "afdc84ce-c66e-46b9-a6c2-ea3a7e44a5c5",
-      "name": "Plug-Switch",
+      "id": "e9dcf826-2327-4d08-a163-3fa6563a5f34",
+      "name": "TpLink Hub Motion",
+      "namespace": "davegut",
+      "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_motion.groovy",
+      "required": false
+    },
+    {
+      "id": "844da47f-41b5-4d47-b08f-5533f310c4fa",
+      "name": "TpLink Hub TempHumidity",
+      "namespace": "davegut",
+      "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_tempHumidity.groovy",
+      "required": false
+    },
+    {
+      "id": "682cb771-b80b-4920-9cee-3a699240e051",
+      "name": "TpLink Plug",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_plug.groovy",
       "required": false
     },
     {
-      "id": "19a7fb5c-195f-4dbc-abdc-7bddff78c79d",
-      "name": "Dimming Plug-Switch",
+      "id": "d01f69b4-22da-4db7-a4c6-c2938e7881e7",
+      "name": "TpLink Dimmer",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_dimmer.groovy",
       "required": false
     },
     {
-      "id": "e3cd85e6-3da7-4576-a95a-f99ac0266b54",
-      "name": "Energy Monitor Plug",
+      "id": "1e0a5cd9-9b5d-408f-ad29-05747a12b474",
+      "name": "TpLink Plug EM",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_plug_em.groovy",
       "required": false
     },
     {
-      "id": "0dc4415c-4f7d-4fc8-a8d3-ce9c14f86462",
-      "name": "Multi Plug Switch",
+      "id": "e169204a-bec2-4277-824f-6e46bff92668",
+      "name": "TpLink Parent",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_parent.groovy",
       "required": false
     },
     {
-      "id": "136c0b05-d6d8-49bb-9177-16263786d290",
-      "name": "MultiPlugSwitch:  Plug",
-      "namespace": "davegut",
-      "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_child_plug.groovy",
-      "required": false
-    },
-    {
-      "id": "6002553a-1251-4fbb-8293-b7c1cc0cd820",
-      "name": "MultiPlugSwitch:  Dimmer",
+      "id": "160c63c7-0e2b-4d8b-a267-af81eb43163b",
+      "name": "TpLink Child Dimmer",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_child_dimmer.groovy",
       "required": false
     },
     {
-      "id": "e52db241-1c7e-438f-b633-3478e1a57883",
-      "name": "MultiPlugSwitch:  Fan",
+      "id": "acaa374d-8b9f-4246-b4a3-ea6ba9f6bd2e",
+      "name": "TpLink Child Fan",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_child_fan.groovy",
       "required": false
     },
     {
-      "id": "4c432ca1-be13-4b30-b89b-bbf93104bff4",
-      "name": "tpLink_robovac",
+      "id": "38df1deb-3fa9-4907-94a7-0d916ca89d87",
+      "name": "TpLink Child Plug",
+      "namespace": "davegut",
+      "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_child_plug.groovy",
+      "required": false
+    },
+    {
+      "id": "c4566b0a-ab2d-454d-9fba-846e46cb535a",
+      "name": "TpLink Robovac",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_robovac.groovy",
       "required": false
