--- a/packageManifest.json
+++ b/packageManifest.json
@@ -22,21 +22,21 @@
   "drivers": [
     {
       "id": "da263b7d-5b17-468a-836e-86ef98b11187",
-      "name": "TpLink Color Bulb",
+      "name": "Color Bulb",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_color_bulb.groovy",
       "required": false
     },
     {
       "id": "53b8a000-57cc-4b31-bade-3b157b8774e9",
-      "name": "TpLink Dimming Bulb",
+      "name": "Dimming Bulb",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_dimmer.groovy",
       "required": false
     },
     {
       "id": "ec486eae-0c27-4e79-bcd2-77afbb4013f0",
-      "name": "TpLink Light Strip",
+      "name": "Light Strip",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_lightStrip.groovy",
       "required": false
