--- a/packageManifest.json
+++ b/packageManifest.json
@@ -1,5 +1,5 @@
 {
-  "packageName": "Test Tapo Plugs, Switches and Bulbs",
+  "packageName": "Tapo Plugs, Switches and Bulbs",
   "author": "David Gutheinz",
   "version": "2.4.1a",
   "minimumHEVersion": "2.4.1",
