--- a/packageManifest.json
+++ b/packageManifest.json
@@ -6,7 +6,7 @@
   "documentationLink": "https://github.com/DaveGut/tpLink_Hubitat",
   "communityLink": "https://community.hubitat.com/t/tp-link-tapo-devices/121084",
   "dateReleased": "2025-02-15",
-  "releaseNotes": "Note: After update, run the Application and Scan for Devices to update the device data.\n\nApp: Added check if driver is installed for device then notify user.\nDevices: Added Preference Sync Name.\nNew Devices:\n\ta. Added Hub TRV support.\n\tb. Added Multi-switch with Fan and Dimmer.\n\tc. Added Hub Switch Driver.",
+  "releaseNotes": "See release note on GitHub.",
   "licenseFile": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/LICENSE",
   "apps": [
     {
