--- a/packageManifest.json
+++ b/packageManifest.json
@@ -1,12 +1,12 @@
 {
   "packageName": "Tapo Plugs, Switches and Bulbs",
   "author": "David Gutheinz",
-  "version": "2.4.1a",
+  "version": "2.4.2a",
   "minimumHEVersion": "2.4.0",
   "documentationLink": "https://github.com/DaveGut/tpLink_Hubitat",
   "communityLink": "https://community.hubitat.com/t/tp-link-tapo-devices/121084",
-  "dateReleased": "2025-02-15",
-  "releaseNotes": "Note: After update, run the Application and Scan for Devices to update the device data.\n\nApp: Added check if driver is installed for device then notify user.\nDevices: Added Preference Sync Name.\nNew Devices:\n\ta. Added Hub TRV support.\n\tb. Added Multi-switch with Fan and Dimmer.\n\tc. Added Hub Switch Driver.",
+  "dateReleased": "2025-07-08",
+  "releaseNotes": "Note: After update, run the Application and Scan for Devices to update the device data.\n\nApp: Added check if driver is installed for device then notify user.\nDevices: Added Preference Sync Name.\nNew Device: Tapo Camera.\nRobovac: Added new Klap over HTTPS transport capability and added Map functions.",
   "licenseFile": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/LICENSE",
   "apps": [
     {
@@ -141,16 +141,23 @@
     },
     {
       "id": "e3cd85e6-3da7-4576-a95a-f99ac0266b54",
-      "name": "TpLink Plug (1)",
+      "name": "TpLink Plug",
       "namespace": "davegut",
-      "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/refs/heads/main/Drivers/tpLink_plug(1).groovy",
+      "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/refs/heads/main/Drivers/tpLink_plug.groovy",
       "required": false
     },
     {
       "id": "53b8a000-57cc-4b31-bade-3b157b8774e9",
-      "name": "TpLink Dimmer (1)",
+      "name": "TpLink Dimmer",
       "namespace": "davegut",
-      "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/refs/heads/main/Drivers/tpLink_dimmer(1).groovy",
+      "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/refs/heads/main/Drivers/tpLink_dimmer.groovy",
+      "required": false
+    },
+    {
+      "id": "8c4da99f-ff34-4cd3-a93d-f2e783e3718e",
+      "name": "TpLink Camera",
+      "namespace": "davegut",
+      "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/refs/heads/main/Drivers/tpLink_Camera.groovy",
       "required": false
     }
   ]
